--- a/build.gradle
+++ b/build.gradle
@@ -113,7 +113,7 @@ task wrapper(type: Wrapper) {
 
 allprojects {
     group = 'com.tngtech.archunit'
-    version = '1.0.0-SNAPSHOT'
+    version = '1.0.0-visualization-SNAPSHOT'
 
     repositories {
         mavenCentral()
