--- a/archunit-visual/package.json
+++ b/archunit-visual/package.json
@@ -3,9 +3,9 @@
   "version": "0.5.0-SNAPSHOT",
   "description": "ArchUnit Visualization",
   "scripts": {
+    "createJsBundle": "webpack",
+    "inlineHtml": "node ./htmlinliner.js",
     "test": "./node_modules/mocha/bin/mocha -r ./src/test/app/mocha-init.js --reporter spec src/test/app/**/*.js",
-    "copyStatic": "find src/main/app/report/*.html src/main/app/report/*.css src/main/app/report/*.json src/main/app/report/menu/*.html src/main/app/report/menu/*.css src/main/app/report/violation-menu/*.html src/main/app/report/violation-menu/*.css -exec cp {} ./build/classes/example-report ';'",
-    "browserify": "./node_modules/browserify/bin/cmd.js -r ./src/main/app/report/visualization.js:visualization -r ./src/main/app/report/web-component-infrastructure.js:web-component-infrastructure -o build/classes/example-report/visualization-bundle.js",
     "watch-js": "nodemon -e js,html,json,css -w src/main/app/report -x 'npm run copyStatic && npm run browserify'",
     "lint": "./node_modules/eslint/bin/eslint.js 'src/**/*.{js,html}'",
     "dev-web-server": "./node_modules/http-server/bin/http-server -c-1 build/classes/example-report/"
@@ -46,13 +46,17 @@
   "devDependencies": {
     "browserify": "^14.3.0",
     "chai": "^3.5.0",
+    "css-loader": "^0.28.11",
     "eslint": "^4.1.0",
     "eslint-plugin-html": "^3.0.0",
     "eslint-plugin-promise": "^3.5.0",
-    "grunt": "^1.0.2",
     "http-server": "^0.10.0",
     "mocha": "^3.4.2",
-    "nodemon": "^1.11.0"
+    "nodemon": "^1.11.0",
+    "style-loader": "^0.21.0",
+    "web-webpack-plugin": "^1.10.4",
+    "webpack": "^4.8.3",
+    "webpack-cli": "^2.1.3"
   },
   "dependencies": {
     "@webcomponents/webcomponentsjs": "^1.0.1",
