AU-50: "repaired" eslint

--- a/archunit-visual/package.json
+++ b/archunit-visual/package.json
@@ -16,7 +16,8 @@
     "root": true,
     "extends": "eslint:recommended",
     "parserOptions": {
-      "ecmaVersion": 6
+      "ecmaVersion": 6,
+      "sourceType": "module"
     },
     "env": {
       "es6": true,
