--- a/archunit-visual/build.gradle
+++ b/archunit-visual/build.gradle
@@ -67,15 +67,17 @@ task cleanNode(type: Delete) {
 
 task cleanAll(dependsOn: [clean, cleanNode])
 
-task mocha(type: NpmTask, dependsOn: 'setupNode') {
+task mocha(type: Exec, dependsOn: 'setupNode') {
+    executable = 'npm'
     args = ['run', 'test']
 }
 
-task eslint(type: NpmTask, dependsOn: 'setupNode') {
+task eslint(type: Exec, dependsOn: 'setupNode') {
+    executable = 'npm'
     args = ['run', 'lint']
 }
 
-task webpack(type: Exec, dependsOn: ['setupNode', 'createReportDir', 'eslint']) {
+task webpack(type: Exec, dependsOn: ['setupNode', 'createReportDir', 'mocha', 'eslint']) {
     executable = 'npm'
     args = ['run', 'createJsBundle']
 }
@@ -93,12 +95,12 @@ task createReportDir {
     }
 }
 
-task copyStatic(type: Copy, dependsOn: createReportDir) {
-    from 'src/main/app/report'
-    include '**/*.html', '**/*.css'
-    into reportOutputDir
+task deleteJsBundles(type: Delete, dependsOn: 'inlinehtml') {
+    delete fileTree(reportOutputDir) {
+        include '**/*.js'
+    }
 }
 
-task buildReport(dependsOn: ['copyStatic', 'mocha', 'eslint', 'webpack', 'inlinehtml']) {}
+task buildReport(dependsOn: ['mocha', 'eslint', 'webpack', 'inlinehtml', 'deleteJsBundles']) {}
 
 assemble.dependsOn buildReport
