--- a/archunit-visual/build.gradle
+++ b/archunit-visual/build.gradle
@@ -92,7 +92,7 @@ task webpack(type: Exec, dependsOn: ['setupNode', 'createReportDir', 'mocha', 'e
 
 task inlinehtml(type: Exec, dependsOn: 'webpack') {
     executable = 'npm'
-    args = ['run', 'inlineHtml']
+    args = ['run', 'inlineHtml', '--', '--env.buildPath=' + reportOutputDir]
 }
 
 task deleteJsBundles(type: Delete, dependsOn: 'inlinehtml') {
