AU-50: the arguments of the bundleHtml-node-task that define the inout and output-paths are now handed over by gradle

--- a/archunit-visual/build.gradle
+++ b/archunit-visual/build.gradle
@@ -92,7 +92,11 @@ task webpack(type: Exec, dependsOn: ['setupNode', 'createReportDir', 'mocha', 'e
 
 task bundleHtml(type: Exec, dependsOn: 'webpack') {
     executable = 'npm'
-    args = ['run', 'bundleHtml']
+    args = ['run', 'bundleHtml',
+            '--',
+            '--redirect', 'build://|build/resources/main/com/tngtech/archunit/visual/report/',
+            '--out-file', 'build/resources/main/com/tngtech/archunit/visual/report/report.html',
+            'src/main/app/report/report.html']
 }
 
 task deleteJsBundles(type: Delete, dependsOn: 'bundleHtml') {
