--- a/archunit-visual/package.json
+++ b/archunit-visual/package.json
@@ -3,10 +3,10 @@
   "version": "0.5.0-SNAPSHOT",
   "description": "ArchUnit Visualization",
   "scripts": {
-    "createJsBundle": "webpack",
+    "createJsBundle": "webpack --mode=development",
     "bundleHtml": "polymer-bundler --inline-scripts --inline-css",
     "test": "./node_modules/mocha/bin/mocha -r ./src/test/app/mocha-init.js --require babel-register --reporter spec src/test/app/**/*.js",
-    "watch-js": "nodemon -e js,html,json,css -w src/main/app/report -x 'npm run createJsBundle && npm run inlineHtml'",
+    "watch-js": "nodemon -e js,html,json,css -w src/main/app/report -x 'npm run createJsBundle && npm run bundleHtml'",
     "lint": "./node_modules/eslint/bin/eslint.js 'src/**/*.{js,html}'",
     "dev-web-server": "./node_modules/http-server/bin/http-server -c-1 build/classes/example-report/"
   },
