enabled the archunit-visual-extension in archunit-examples

--- a/archunit-example/example-plain/src/test/resources/archunit.properties
+++ b/archunit-example/example-plain/src/test/resources/archunit.properties
@@ -1,3 +1,4 @@
 resolveMissingDependenciesFromClassPath=true
 extension.archunit-example-extension.enabled=false
+extension.archunit-visual.enabled=true
 extension.archunit-example-extension.example-prop=exampleValue
