--- a/archunit-visual/build.gradle
+++ b/archunit-visual/build.gradle
@@ -8,6 +8,7 @@ dependencies {
     compile project(path: ':archunit', configuration: 'shadow')
     compile dependency.guava
     compile dependency.gson
+    compile dependency.slf4j
 
     testCompile dependency.log4j_api
     testCompile dependency.log4j_core
