--- a/archunit-visual/package.json
+++ b/archunit-visual/package.json
@@ -60,12 +60,13 @@
     "polymer-bundler": "^4.0.2",
     "style-loader": "^0.21.0",
     "web-webpack-plugin": "^1.10.4",
-    "webpack": "^4.8.3",
-    "webpack-cli": "^2.1.3"
+    "webpack": "^4.20.2",
+    "webpack-cli": "^3.1.1"
   },
   "dependencies": {
     "@webcomponents/webcomponentsjs": "^1.0.1",
     "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
     "d3": "^4.9.1"
   }
 }
