--- a/archunit-example/example-junit4/build.gradle
+++ b/archunit-example/example-junit4/build.gradle
@@ -7,6 +7,8 @@ dependencies {
     testRuntime dependency.log4j_api
     testRuntime dependency.log4j_core
     testRuntime dependency.log4j_slf4j
+
+    testCompile group: 'org.hibernate', name: 'hibernate-core', version: '4.1.5.SP1'
 }
 
 test {
